[acquirer-backend] Added pagination and user filter on GET Audits
